package tn.fst.classroom_crb.entities;

public enum Niveau {
    PREMIERE,
    DEUXIEME,
    TROISIEME,
    QUATRIEME,
    CINQUIEME
}
