package tn.fst.classroom_crb.entities;

public enum Specialite {
    INFORMATIQUE,
    AGRICULTURE
}
